--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <ul>
-    <li>lifestule</li>
+    <li>lifestile</li>
     <li>photodiary </li>
     <li>music</li>
     <li>travel</li>
@@ -31,7 +31,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quis doloremque quam ratione sed quos ea, pariatur voluptatibus, maiores repellendus, est magnam omnis obcaecati itaque possimus delectus nesciunt in corrupti impedit ut veritatis voluptatum nihil recusandae nemo. Vel eum perspiciatis, at eveniet a amet, blanditiis doloribus et repellat fuga fugit vitae molestias. Dolorum dolores voluptatum ipsum totam officia ipsa! Vero quos in enim alias optio maiores ea cupiditate deleniti odit dolor earum molestias aliquid obcaecati itaque culpa nihil saepe ipsa laborum qui dolorem, quibusdam nulla. Ad optio quaerat reprehenderit maiores eligendi cumque aperiam aliquid, est necessitatibus! Modi voluptates itaque commodi pariatur nesciunt eligendi voluptate incidunt dolores architecto porro excepturi ad maiores, illo tenetur adipisci cum, ea fugiat delectus nemo! Aliquam necessitatibus velit rem, dolorum hic similique natus ratione, dicta iste dignissimos, dolores deserunt obcaecati sed enim laborum accusamus ea sint fugiat soluta animi ex voluptatem? Nisi rerum unde iure dicta?
     </p>
 
-    <img src="img/man.jpg" alt="a man">
+    <img src="img/Man.jpg" alt="a Man">
     <p>photodiary</p>
     <h2>A day exploaring the Alps</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quis doloremque quam ratione sed quos ea, pariatur voluptatibus, maiores repellendus, est magnam omnis obcaecati itaque possimus delectus nesciunt in corrupti impedit ut veritatis voluptatum nihil recusandae nemo. Vel eum perspiciatis, at eveniet a amet, blanditiis doloribus et repellat fuga fugit vitae molestias. Dolorum dolores voluptatum ipsum totam officia ipsa! Vero quos in enim alias optio maiores ea cupiditate deleniti odit dolor earum molestias aliquid obcaecati itaque culpa nihil saepe ipsa laborum qui dolorem, quibusdam nulla. Ad optio quaerat reprehenderit maiores eligendi cumque aperiam aliquid, est necessitatibus! Modi voluptates itaque commodi pariatur nesciunt eligendi voluptate incidunt dolores architecto porro excepturi ad maiores, illo tenetur adipisci cum, ea fugiat delectus nemo! Aliquam necessitatibus velit rem, dolorum hic similique natus ratione, dicta iste dignissimos, dolores deserunt obcaecati sed enim laborum accusamus ea sint fugiat soluta animi ex voluptatem? Nisi rerum unde iure dicta?
