--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<Html lang="zxx">
+<Html lang="en">
 <head>
     <title> My first homework </title>
     <meta charset="utf-8"/>
@@ -7,10 +7,10 @@
 <body>
     <nav>
         <ul>
-            <li>lifestile</li>
-            <li>photodiary </li>
-            <li>music</li>
-            <li>travel</li>
+            <li><a href=""> lifestile</a> </li>
+            <li><a href=""> photodiary </a> </li>
+            <li><a href=""> music </a> </li>
+            <li><a href=""> travel </a> </li>
         </ul>
     </nav>
 
